[tool.poetry]
name = "django_oauth2"
version = "0.1.0"
description = ""
authors = ["bruno <bruno.mcreal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-allauth = "^0.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
